--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
-body {
-  background-color: blue;
-}
+/* header section */
+
+/* navigation section */
+
+/* main section */
+
+/* footer section */
